samples/_failures_safe/1761308902_c39c29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e08237a.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_3e08237a.c:176:5: error: expected expression at end of input
  176 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_3e08237a.c:176:5: error: expected declaration or statement at end of input
